--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,18 +6,34 @@ on:
     - master
   pull_request:
 
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Docker tags'
+        required: true
+        default: "latest"
+
 jobs:
   build:
     name: 'Build'
     runs-on: ubuntu-latest
     steps:
-      - name: "Build:checkout"
+      - name: "checkout"
         uses: actions/checkout@v2
-      - name: 'Build:dockerimage'
+
+      - name: Print event data
+        run: echo "$EVENT"
+        env:
+          EVENT: ${{ toJSON( github.event ) }}
+
+      - run: echo ::set-env name=REPOSITORY_NAME::$(echo "$GITHUB_REPOSITORY" | awk -F / '{print $2}')
+        shell: bash
+
+      - name: 'Build dockerimage'
         uses: docker/build-push-action@v1
         with:
           registry: ghcr.io
-          username: "rguichard"
+          username: "${GITHUB_ACTOR}"
           password: ${{ secrets.PAT }}
-          repository: rguichard/helloworld
-          tags: latest
+          repository: ${GITHUB_ACTOR}/${REPOSITORY_NAME}
+          tags: "${{ github.event.inputs.tag }}"
