--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,11 +29,26 @@ jobs:
       - run: echo ::set-env name=REPOSITORY_NAME::$(echo "$GITHUB_REPOSITORY" | awk -F / '{print $2}')
         shell: bash
 
-      - name: 'Build dockerimage'
-        uses: docker/build-push-action@v1
+      - name: Login to Github Packages
+        uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: "${GITHUB_ACTOR}"
+          username: ${GITHUB_ACTOR}
           password: ${{ secrets.PAT }}
-          repository: ${GITHUB_ACTOR}/${REPOSITORY_NAME}
-          tags: "${{ github.event.inputs.tag }}"
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: |
+            ghcr.io/${GITHUB_REPOSITORY}:latest
+
+
+      # - name: 'Build dockerimage'
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     registry: ghcr.io
+      #     username: "${GITHUB_ACTOR}"
+      #     password: ${{ secrets.PAT }}
+      #     repository: ${GITHUB_ACTOR}/${{ github.event.repository.name }}
+      #     tags: "${{ github.event.inputs.tag }}"
