--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,22 +21,42 @@ jobs:
       - name: "checkout"
         uses: actions/checkout@v2
 
-      - name: Login to Github Packages
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${GITHUB_ACTOR}
-          password: ${{ secrets.PAT }}
+      - name: Build the Docker image
+        run: |
+          echo "build ghcr.io/${GITHUB_REPOSITORY}:latest"
+          docker build -t ghcr.io/${GITHUB_REPOSITORY}:latest .
 
-      - name: Image digest
-        run: echo "build ghcr.io/${GITHUB_REPOSITORY}:latest"
+      - name: Setup GitHub Container Registry
+        run: echo $CR_PAT | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
+        env:
+          CR_PAT: ${{ secrets.PAT }}
 
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: |
-            ghcr.io/${GITHUB_REPOSITORY}:latest
+      - name: push to GitHub Container Registry
+        run: docker push ghcr.io/${GITHUB_REPOSITORY}:latest
+
+    # - name: build Image
+    #   run: |
+    #     echo $CR_PAT | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
+    #   env:
+    #     CR_PAT: ${{ secrets.PAT }}
+
+    #   - name: Login to Github Packages
+    #     uses: docker/login-action@v1
+    #     with:
+    #       registry: ghcr.io
+    #       username: ${GITHUB_ACTOR}
+    #       password: ${{ secrets.PAT }}
+
+    #   - name: Image digest
+
+    #     run: echo "build ghcr.io/${GITHUB_REPOSITORY}:latest"
+
+    #   - name: Build and push
+    #     uses: docker/build-push-action@v2
+    #     with:
+    #       push: true
+    #       tags: |
+    #         ghcr.io/${GITHUB_REPOSITORY}:latest
 
 
       # - name: 'Build dockerimage'
