--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,18 +21,25 @@ jobs:
       - name: "checkout"
         uses: actions/checkout@v2
 
-      - name: Build the Docker image
-        run: |
-          echo "build ghcr.io/${GITHUB_REPOSITORY}:latest"
-          docker build -t ghcr.io/${GITHUB_REPOSITORY}:latest .
-
       - name: Setup GitHub Container Registry
         run: echo $CR_PAT | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
         env:
           CR_PAT: ${{ secrets.PAT }}
 
-      - name: push to GitHub Container Registry
-        run: docker push ghcr.io/${GITHUB_REPOSITORY}:latest
+      - name: Build and Push image
+        run: |
+          IMAGE_ID=ghcr.io/${GITHUB_REPOSITORY}
+          # Strip git ref prefix from version
+          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+          # Strip "v" prefix from tag name
+          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
+          # Use Docker `latest` tag convention
+          [ "$VERSION" == "master" ] && VERSION=latest
+          echo IMAGE_ID=$IMAGE_ID
+          echo VERSION=$VERSION
+          docker build -t $IMAGE_ID:$VERSION .
+          docker image ls
+          docker push $IMAGE_ID:$VERSION
 
     # - name: build Image
     #   run: |
